# pit-bot

./: CLAUDE.md  Dockerfile  README.md  fact_file.md  main.py  pyproject.toml  system_prompt.md  team_information.md
scripts/: docker_run.sh  openai_api_curl.sh
