[project]
name = "pit-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentic>=0.1.0",
    "pydantic-ai>=1.62.0",
    "typer>=0.24.0",
    "uvicorn>=0.41.0",
]

# --------------------------------------------------------------------------------------
# Dependency Sources
# --------------------------------------------------------------------------------------

# Temporary override: use forked pydantic-ai until fix for issue-2818 is merged upstream.
# Remove this section and run `uv sync` once the fix is released to PyPI.
[tool.uv.sources]
agentic = { git = "https://github.com/cmlccie/agentic.git", branch = "main" }
